[package]
name = "microwave"
version = "0.10.0"
authors = ["Woyten <woyten.tielesch@online.de>"]
description = "Make xenharmonic music and explore musical tunings."
repository = "https://github.com/Woyten/tune/tree/master/microwave"
readme = "README.md"
keywords = ["microtonal", "piano", "scales", "synthesizer", "tuning"]
license = "MIT"
edition = "2018"

[features]
sf3 = ["fluidlite-lib/with-sf3"]

[dependencies]
chrono = "0.4.15"
cpal = { version = "0.12.1", features = ["wasm-bindgen"] }
fluidlite = "0.1.3"
fluidlite-lib = "0.1.3"
hound = "3.4.0"
midir = "0.7.0"
nannou = "0.14.1"
structopt = "0.3.16"
tune = { version = "0.16.0", path = ".." }
tune-cli = { version = "0.13.0", path = "../tune-cli"}
